# textgrad-classifier

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: contact.yaml  issues.yaml  issues_debug.yaml
data/: contact_notes.csv  issues.csv  issues_binary.csv
docs/: gradient-rag-plan.md
logs/: 2025-06-10_21-27-18.jsonl  2025-06-10_21-31-44.jsonl  2025-06-10_21-33-26.jsonl  2025-06-10_21-35-22.jsonl  2025-06-14_21-04-59.jsonl  2025-06-14_21-16-32.jsonl  2025-06-14_23-39-37.jsonl  2025-06-14_23-42-15.jsonl  2025-06-14_23-47-15.jsonl  2025-06-14_23-50-21.jsonl
outputs/2025-06-14_23-19-14/: prompt_epoch_1.txt
outputs/2025-06-14_23-39-37/: metrics_summary.json  predictions.csv  prompt_epoch_1.txt  results.json
outputs/2025-06-14_23-42-16/: predictions.csv  prompt_epoch_1.txt  results.json
outputs/2025-06-14_23-47-16/: metrics_summary.json  prompt_epoch_1.txt  results.json
outputs/2025-06-14_23-50-22/: metrics_summary.json  optimized_config.yaml  predictions.csv  prompt_epoch_1.txt  results.json
scripts/: eval_metrics.py  prepare_data.py  run_textgrad.py
scripts/core/: textgrad_runner.py
scripts/data_prep/: prepare_data.py  prepare_issues_binary.py
